flexbox fixed wrapped

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -133,7 +133,10 @@ button {
     margin: 3px;
 }
 
-#tiimi{ margin: 130px 5% 20px 5%}
+#tiimi {
+    margin: 180px 5% 20px 5%
+}
+
 .centteri {
     margin: 180px 5%;
 }
@@ -164,6 +167,7 @@ button {
 }
 
 @media screen and (max-width: 700px) {
+
     .header {
         width: 100%;
         margin: 0;
@@ -204,13 +208,14 @@ button {
 
     .flexaus {
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap ;
+        justify-content: space-evenly;
     }
 
     .flexaus li {
         list-style-type: none;
         width: 300px;
-        margin: 15px;
+        margin: 35px;
         text-align: center;
         line-height: 45px;
         font-size: 20px;
